// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/status LOADING_STATUS should not change if already loading that action 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {
    "TEST": true,
  },
}
`;

exports[`reducers/status LOADING_STATUS should set loading status when initially empty 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {
    "TEST": true,
  },
}
`;

exports[`reducers/status LOADING_STATUS should set loading status when not empty 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {
    "OTHER": true,
    "TEST": true,
  },
}
`;

exports[`reducers/status should clear state on CLOSE_STATUS 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {},
}
`;

exports[`reducers/status should clear state on LOCATION_CHANGE 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {},
}
`;

exports[`reducers/status should handle ERROR_STATUS 1`] = `
Object {
  "error": Object {
    "message": "something",
  },
  "info": null,
  "loading": Object {},
}
`;

exports[`reducers/status should handle INFO_STATUS 1`] = `
Object {
  "error": null,
  "info": "something",
  "loading": Object {},
}
`;

exports[`reducers/status should handle loding done 1`] = `
Object {
  "error": null,
  "info": null,
  "loading": Object {},
}
`;
